Added all data bindings in the fragments

--- a/app/src/main/res/layout/fragment_checkout.xml
+++ b/app/src/main/res/layout/fragment_checkout.xml
@@ -22,6 +22,16 @@
     tools:context=".ui.order.CheckoutFragment">
 
     <!-- TODO: Add the data binding variables of the type OrderViewModel and the CheckoutFragment -->
+    <data>
+        //Note: Reference variable in entree/side/accompaniment fragments
+        <variable
+            name="viewModel"
+            type="com.example.lunchtray.model.OrderViewModel" />
+        <variable
+            name="OrderViewModel"
+            type="com.example.lunchtray.ui.order.CheckoutFragment" />
+
+    </data>
 
     <ScrollView
         android:layout_width="match_parent"
