Finished fragment_checkout. There might be an issue with the variable "OrderViewModel". I might not be understanding this one right. If there are issues, go back here.

--- a/app/src/main/res/layout/fragment_checkout.xml
+++ b/app/src/main/res/layout/fragment_checkout.xml
@@ -49,49 +49,55 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"/>
 
-            <!-- TODO: display the entree name based on the entree selection -->
+            <!-- TODO: display the entree name based on the entree selection using view model-->
             <TextView
                 android:id="@+id/entree_selection"
+                android:text="@{viewModel.entree.name}"
                 style="@style/Widget.LunchTray.TextView.CheckoutItem.Info"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/order_summary"
                 tools:text="Cauliflower" />
 
-            <!-- TODO: display the entree price based on the entree selection -->
+            <!-- TODO: display the entree price based on the entree selection using view model -->
             <TextView
                 android:id="@+id/entree_price"
+                android:text="@{viewModel.entree.formattedPrice}"
                 style="@style/Widget.LunchTray.TextView.CheckoutItem.Info"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@id/entree_selection"
                 tools:text="$7.00"/>
 
-            <!-- TODO: display the side name based on the side selection -->
+            <!-- TODO: display the side name based on the side selection using view model -->
             <TextView
                 android:id="@+id/side_selection"
+                android:text="@{viewModel.side.name}"
                 style="@style/Widget.LunchTray.TextView.CheckoutItem.Info"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/entree_selection"
                 tools:text="Spicy Potatoes" />
 
-            <!-- TODO: display the side price based on the side selection -->
+            <!-- TODO: display the side price based on the side selection using view model -->
             <TextView
                 android:id="@+id/side_price"
+                android:text="@{viewModel.side.formattedPrice"
                 style="@style/Widget.LunchTray.TextView.CheckoutItem.Info"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@id/side_selection"
                 tools:text="$2.00"/>
 
-            <!-- TODO: display the accompaniment name based on the accompaniment selection -->
+            <!-- TODO: display the accompaniment name based on the accompaniment selection  using view model-->
             <TextView
                 android:id="@+id/accompaniment_selection"
+                android:text="@{viewModel.accompaniment.name}"
                 style="@style/Widget.LunchTray.TextView.CheckoutItem.Info"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/side_selection"
                 tools:text="Mixed Berries" />
 
-            <!-- TODO: display the accompaniment price based on the accompaniment selection -->
+            <!-- TODO: display the accompaniment price based on the accompaniment selection using view model-->
             <TextView
                 android:id="@+id/accompaniment_price"
+                android:text="@{viewModel.accompaniment.formattedPrice}"
                 style="@style/Widget.LunchTray.TextView.CheckoutItem.Info"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@id/accompaniment_selection"
@@ -108,6 +114,7 @@
             <!-- TODO: set the text to the current subtotal value from the view model -->
             <TextView
                 android:id="@+id/subtotal"
+                android:text='@{@string/subtotal(viewModel.subtotal)}'
                 style="@style/Widget.LunchTray.TextView.Subtotal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/divider"
@@ -116,6 +123,7 @@
             <!-- TODO: set the text to the current tax value from the view model -->
             <TextView
                 android:id="@+id/tax"
+                android:text="@{@string/tax(viewModel.tax)}"
                 style="@style/Widget.LunchTray.TextView.Subtotal"
                 android:layout_marginTop="0dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -125,6 +133,7 @@
             <!-- TODO: set the text to the current total value from the view model -->
             <TextView
                 android:id="@+id/total"
+                android:text="@{@string/total(viewModel.total)"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAllCaps="true"
@@ -136,6 +145,7 @@
             <!-- TODO: submit the order when clicked -->
             <Button
                 android:id="@+id/submit_button"
+                android:onClick="@{() -> OrderViewModel.submitOrder()}"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/side_margin"
@@ -147,6 +157,7 @@
             <!-- TODO: cancel the order when clicked -->
             <Button
                 android:id="@+id/cancel_button"
+                android:onClick="@{() -> OrderViewModel.cancelOrder()}"
                 style="?attr/materialButtonOutlinedStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
