--- a/app/src/main/res/layout/fragment_start_order.xml
+++ b/app/src/main/res/layout/fragment_start_order.xml
@@ -25,6 +25,7 @@
 
     <Button
         android:id="@+id/start_order_btn"
+        android:onClick="@{() -> StartOrderFragment.goToNextScreen()}"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/base_margin"
