--- a/app/src/main/res/layout/fragment_checkout.xml
+++ b/app/src/main/res/layout/fragment_checkout.xml
@@ -79,7 +79,7 @@
             <!-- TODO: display the side price based on the side selection using view model -->
             <TextView
                 android:id="@+id/side_price"
-                android:text="@{viewModel.side.formattedPrice"
+                android:text="@{viewModel.side.formattedPrice}"
                 style="@style/Widget.LunchTray.TextView.CheckoutItem.Info"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@id/side_selection"
@@ -133,7 +133,7 @@
             <!-- TODO: set the text to the current total value from the view model -->
             <TextView
                 android:id="@+id/total"
-                android:text="@{@string/total(viewModel.total)"
+                android:text="@{@string/total(viewModel.total)}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAllCaps="true"
